Addressing a handful of open github issues (#741)
* Github Issue 718. Add papers to Hector manuscript lists, including  V3.2.0 manuscript 

* github issue 727. rename FCH4 to RF_CH4 to match all other RF output

* Add a new release checklist

* github issue 734, add output streams

* quite build message

* github issue 740, add matilda refernces

* github issue 735, add ref temperature period to plot

--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,8 @@ hector_tas_results$scenario <- ifelse(hector_tas_results$year <= 2016, "historic
 ggplot(hector_tas_results) +
     geom_line(aes(year, value, color = scenario), linewidth = 1) +
     theme_bw(base_size = 15) +
-    labs(color = NULL, x = NULL, y = expression("Temperature Anomaly ("~degree~"C)")) +
+    theme(axis.title = element_text(size = 12))+
+    labs(color = NULL, x = NULL, y = expression("Temperature Anomaly Relative to 1750 ("~degree~"C)")) +
     scale_color_manual(values = SSP_COLORS)
 ```
 
