--- a/vignettes/articles/Hector-Wider-World.Rmd
+++ b/vignettes/articles/Hector-Wider-World.Rmd
@@ -12,96 +12,84 @@ knitr::opts_chunk$set(
 ```
 
 
-This page is meant to serve as a reference for places where Hector has been featured. This list will be updated with time.
+This page lists the key model documentation manuscripts, articles featuring Hector, and other Hector-related resources. 
+
+## Documentation Manuscripts {#hector_documentation}
+
+### Hector V 3.2.0
+
+Dorheim, K., Gering, S., Gieseke, R., Hartin, C., Pressburger, L., Shiklomanov, A. N., Smith, S. J., Tebaldi, C., Woodard, D. L., and Bond-Lamberty, B.: Hector V3.2.0: functionality and performance of a reduced-complexity climate model, Geosci. Model Dev., 17, 4855–4869, https://doi.org/10.5194/gmd-17-4855-2024, 2024.
+
+*  Hector V3.2.0 uses the AR6 radiative forcing calculations, includes the permafrost feedback and  carbon tracking feature. Hector's NPP accounts for LUC emissions. 
+
+### Hector V 2.0
+
+Vega-Westhoff, B., Sriver, R. L., Hartin, C. A., Wong, T. E., and Keller, K.: Impacts of observational constraints related to sea level on estimates of climate sensitivity, Earths Future, 7, 677–690, 2019.
+
+* Hector V2.0 incorporates a one-dimensional diffusive heat and energy balance model called [DOECLIM](https://pure.mpg.de/rest/items/item_994422_1/component/file_994421/content) and a global sea level module called [BRICK](https://doi.org/10.5194/gmd-10-2741-2017).
+
+### Hector V 1.1
+
+Hartin, C. A., Bond-Lamberty, B. P., Patel, P., and Mundra, A. (2016). Ocean acidification over the next three centuries using a simple global climate carbon-cycle model: projections and sensitivities, Biogeosciences, 13, 4329 – 4342. https://doi.org/10.5194/bg-13-4329-2016
+
+* Hector v1.1 contains an updated ocean temperature algorithm to better match the CMIP5 mean.
+ 
+### Hector V 1.0 
+
+Hartin, C. A., Patel, P., Schwarber, A., Link, R. P., and Bond-Lamberty, B. P.: A simple object-oriented and open-source model for scientific and policy analyses of the global climate system – Hector v1.0, Geosci. Model Dev., 8, 939–955, https://doi.org/10.5194/gmd-8-939-2015, 2015. 
+
+* The original manuscript for Hector v1.0 was published in 2015. Hector is an open-source, object-oriented simple global carbon cycle model. The model takes in  CO$_2$ and non-CO$_2$ emissions (e.g., CH$_4$, N$_2$O), converting emissions to concentrations where needed, and calculates the global radiative forcing and the global mean temperature change
+ 
   
-## Hector Publications {#hector_documentation}
-
-There are three documentation manuscripts for Hector. 
-
-### Hector v1 
-> Hartin, C. A., Patel, P., Schwarber, A., Link, R. P., and Bond-Lamberty, B. P. (2015). A simple object-oriented and open-source model for scientific and policy analyses of the global climate system – Hector v1.0, Geosci. Model Dev., 8, 939–955. https://doi.org/10.5194/gmd-8-939-2015.
-
-The original manuscript for Hector v1.0 was published in 2015. Hector is an open-source, object-oriented simple global carbon cycle model. The model takes in  CO$_2$ and non-CO$_2$ emissions (e.g., CH$_4$, N$_2$O), converting emissions to concentrations where needed, and calculates the global radiative forcing and the global mean temperature change
- 
-### Hector v1.1
-> Hartin, C. A., Bond-Lamberty, B. P., Patel, P., and Mundra, A. (2016). Ocean acidification over the next three centuries using a simple global climate carbon-cycle model: projections and sensitivities, Biogeosciences, 13, 4329 – 4342. https://doi.org/10.5194/bg-13-4329-2016
-
-Hector v1.1 contains an updated ocean temperature algorithm to better match the CMIP5 mean.
- 
-### Hector v2.0
-> Vega-Westhoff, B., Sriver, R. L., Hartin, C. A., Wong, T. E., & Keller, K. (2019). Impacts of observational constraints related to sea level on estimates of climate sensitivity. Earth's Future, 7, 677– 690. https://doi.org/10.1029/2018EF001082
-
-Hector v2.0 incorporates a one-dimensional diffusive heat and energy balance model called [DOECLIM](https://pure.mpg.de/rest/items/item_994422_1/component/file_994421/content) and a global sea level module called [BRICK](https://doi.org/10.5194/gmd-10-2741-2017).
-
 ## Hector in Literature {#other_manuscripts}
 
-### Journal articles
-Below are journal articles that use or reference Hector. 
+Other journal articles that use or reference Hector. 
+
+1. Wang, T., Teng, F. Damage function uncertainty increases the social cost of methane and nitrous oxide. Nat. Clim. Chang. 13, 1258–1265 (2023). https://doi.org/10.1038/s41558-023-01803-4
+
+1. Protection Agency, E.: Report on the social cost of greenhouse gases: Estimates incorporating recent scientific advances, 2022.
+    + Specifically the [Supplemental Material](https://www.epa.gov/system/files/documents/2022-11/epa_scghg_report_draft_0.pdf)
+    
+1. Wang, Tianpeng, Fei Teng, Xu Deng, and Jun Xie. 2022. “Climate Module Disparities Explain Inconsistent Estimates of the Social Cost of Carbon in Integrated Assessment Models.” One Earth 5 (7): 767–78.
+
+1.  Woodard, D. L., Shiklomanov, A. N., Kravitz, B., Hartin, C., Bond-Lamberty, B. (2021). A permafrost implementation in the simple carbon-climate model Hector v.2.3pf. Geosci. Model Dev., 14, 4751–4767. ttps://doi.org/10.5194/gmd-14-4751-2021
+    + This study adds permafrost into Hector as a separate land carbon pool which decomposes into CH$_4$ and CO$_2$ when thawed. The thaw rate is controlled by region-specific air temperature increases. 
+    
+1. Nicholls, Z., Meinshausen, M., Lewis, J., Corradi, M. R., Dorheim, K., Gasser, T., Gieseke, R., Hope, A. P., Leach, N. J., McBride, L. A., Quilcaille, Y., Rogelj, J., Salawitch, R. J., Samset, B. H., Sandstad, M., Shiklomanov, A., Skeie, R. B., Smith, C. J., Smith, S. J., Su, X., Tsutsui, J., Vega-Westhoff, B., and Woodard, D. L.: Reduced Complexity Model Intercomparison Project Phase 2: Synthesizing Earth System Knowledge for Probabilistic Climate Projections, Earths Future, 9, e2020EF001900, 2021.    
+
+1. Nicholls, Z. R. J., Meinshausen, M., Lewis, J., Gieseke, R., Dommenget, D., Dorheim, K., Fan, C.-S., Fuglestvedt, J. S., Gasser, T., Golüke, U., Goodwin, P., Hartin, C., Hope, A. P., Kriegler, E., Leach, N. J., Marchegiani, D., McBride, L. A., Quilcaille, Y., Rogelj, J., Salawitch, R. J., Samset, B. H., Sandstad, M., Shiklomanov, A. N., Skeie, R. B., Smith, C. J., Smith, S., Tanaka, K., Tsutsui, J., and Xie, Z.: Reduced Complexity Model Intercomparison Project Phase 1: introduction and evaluation of global-mean temperature response, Geosci. Model Dev., 13, 5175–5190, https://doi.org/10.5194/gmd-13-5175-2020, 2020.
+
+1. Evanoff et al., (2020). hectorui: A web-based interactive scenario builder and visualization application for the Hector climate model. Journal of Open Source Software, 5(56), 2782, https://doi.org/10.21105/joss.02782
+
+1. Vega‐Westhoff, B., Sriver, R. L., Hartin, C., Wong, T. E., & Keller, K. (2020). The role of climate sensitivity in upper‐tail sea level rise projections. Geophysical Research Letters, 47, e2019GL085792. https://doi.org/10.1029/2019GL085792
+    + This study uses Hector-BRICK to investigate the effects of Earth's equilibrium climate sensitivity, or long-term temperature response to a doubling of atmospheric CO$_2$, on sea-level rise with a focus on the high-impact upper tail. 
+    
+1. Dorheim, K., Link, R., Hartin, C., Kravitz, B., & Snyder, A. (2020). Calibrating simple climate models to individual Earth system models: Lessons learned from calibrating Hector. Earth and Space Science, 7, e2019EA000980. > https://doi.org/10.1029/2019EA000980
+    + In this article, the authors use Hector v2.5.0 to emulate the multiforcing historical and RCP scenario output for 31 concentration and seven emissions-driven Earth System Models. 
+    
+1. Schwarber, A. K., Smith, S. J., Hartin, C. A., Vega-Westhoff, B. A., and Sriver, R. (2019). Evaluating climate emulation: fundamental impulse testing of simple climate models, Earth Syst. Dynam., 10, 729–739. https://doi.org/10.5194/esd-10-729-2019
+    + The authors use fundamental impulse tests of CO$_2$, CH$_4$, and black carbon to understand the fundamental gas cycle and climate system responses of comprehensive and idealized simple climate models.
+    
+1. Willner et al, (2017), pyhector: A Python interface for the simple climate model Hector, Journal of Open Source Software, 2(12), 248, doi:10.21105/joss.00248. 
 
 
---
-
-[Climate module disparities explain inconsistent estimates of the social cost of carbon in integrated assessment models]()
-
-
-> Wang, Tianpeng, Fei Teng, Xu Deng, and Jun Xie. 2022. “Climate Module Disparities Explain Inconsistent Estimates of the Social Cost of Carbon in Integrated Assessment Models.” One Earth 5 (7): 767–78.
-
-
---
-
-[A permafrost implementation in the simple carbon-climate model Hector v.2.3pf](https://gmd.copernicus.org/articles/14/4751/2021/)
-
-> Woodard, D. L., Shiklomanov, A. N., Kravitz, B., Hartin, C., Bond-Lamberty, B. (2021). A permafrost implementation in the simple carbon-climate model Hector v.2.3pf. Geosci. Model Dev., 14, 4751–4767. ttps://doi.org/10.5194/gmd-14-4751-2021
-
-This study adds permafrost into Hector as a separate land carbon pool which decomposes into CH$_4$ and CO$_2$ when thawed. The thaw rate is controlled by region-specific air temperature increases. 
-
---
-
-[The role of climate sensitivity in upper-tail sea level rise projections](https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2019GL085792)
-
-> Vega‐Westhoff, B., Sriver, R. L., Hartin, C., Wong, T. E., & Keller, K. (2020). The role of climate sensitivity in upper‐tail sea level rise projections. Geophysical Research Letters, 47, e2019GL085792. https://doi.org/10.1029/2019GL085792
-
-This study uses Hector-BRICK to investigate the effects of Earth's equilibrium climate sensitivity, or long-term temperature response to a doubling of atmospheric CO$_2$, on sea-level rise with a focus on the high-impact upper tail. 
-
---
-
-[Calibrating simple climate models to individual Earth System Models: Lessons learned from calibrating Hector](https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2019EA000980)
-
-> Dorheim, K., Link, R., Hartin, C., Kravitz, B., & Snyder, A. (2020). Calibrating simple climate models to individual Earth system models: Lessons learned from calibrating Hector. Earth and Space Science, 7, e2019EA000980. > https://doi.org/10.1029/2019EA000980 
-
-In this article, the authors use Hector v2.5.0 to emulate the multiforcing historical and RCP scenario output for 31 concentration and seven emissions-driven Earth System Models. 
-
---
-
-[Evaluating climate emulation: fundamental impulse testing of simple climate models](https://esd.copernicus.org/articles/10/729/2019/)
-
-> Schwarber, A. K., Smith, S. J., Hartin, C. A., Vega-Westhoff, B. A., and Sriver, R. (2019). Evaluating climate emulation: fundamental impulse testing of simple climate models, Earth Syst. Dynam., 10, 729–739. https://doi.org/10.5194/esd-10-729-2019
-
-The authors use fundamental impulse tests of CO$_2$, CH$_4$, and black carbon to understand the fundamental gas cycle and climate system responses of comprehensive and idealized simple climate models. 
-
-### RCMIP Project
-The Reduced Complexity Model Intercomparison Project ([RCMIP](https://www.rcmip.org/)) is the first systematic intercomparison project for reduced-complexity climate models (RCM) and provides a standard protocol for one-line models and simple and reduced-complexity models to perform experiments from a common set of assumptions. In short, this creates a standardized test of RCMs to reproduce Earth System Model projections. Hector is one such model being used in RCMIP. 
-
-[RCMIP Phase 1](https://gmd.copernicus.org/articles/13/5175/2020/) focuses on RCMs' global mean temperature responses while [RCMIP Phase 2](https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2020EF001900) explores the extent to which different RCMs can be calibrated to reproduce knowledge from specialized research communities. 
-
-## Other Places
+## Other Hector Tools and Resources
 
 ### Mimi Framework
 MIMI is a Julia package for integrated assessment models. MimiHECTOR is a partial implementation of Hector in Julia.  
 Github found [here](https://github.com/anthofflab/MimiHector.jl).
 
 ### pyhector
-pyhector is a Python interface for Hector.
-[Here](https://joss.theoj.org/papers/10.21105/joss.00248) is a paper describing pyhector by Sven N Wilner, Corrine Hartin, and Robert Gieseke.  
-Github found [here](https://github.com/openclimatedata/pyhector).
+pyhector is a Python interface for Hector maintained by external collaborators. Available at the [pyhector](https://github.com/openclimatedata/pyhector) Github and described in the [pyhector JOSS  manuscript](https://joss.theoj.org/papers/10.21105/joss.00248).
 
 ### HectorUI
-HectorUI is an R Shiny web interface designed to be user-friendly and to provide an alternative to the command line for running Hector. This allows users who may not be fluent in C++ or R to explore model scenarios and outputs. 
+HectorUI is an R Shiny web interface designed to be user-friendly and to provide an alternative to the command line for running Hector. This allows users who may not be fluent in C++ or R to explore model scenarios and outputs. Access the HectorUI interface [here](https://jgcri.shinyapps.io/HectorUI/) and read the [HectorUI documentation manuscript](https://doi.org/10.21105/joss.0278) for more details. A YouTube overview of HectorUI by Stephanie Pennington can be found [here](https://www.youtube.com/watch?v=fBHXS7pjZcI).
 
-The HectorUI interface can be found [here](https://jgcri.shinyapps.io/HectorUI/).
 
-The HectorUI paper can be found [here](https://joss.theoj.org/papers/10.21105/joss.02782)  
+### Matilda 
+[Matilda](https://github.com/JGCRI/matilda) is an open source R package that provides users with a reproducible-transparent framework for conducting probabilistic analyses using Hector. 
 
-> Evanoff J.E., Vernon, C.R., Waldhoff, S.T., Snyder, A. C., and Hartin, C.A. (2020). "hectorui: A web-based interactive scenario builder and visualization application for the Hector climate model." The Journal of Open Source Software 5, no. 56:Article No. 2782. PNNL-SA-156861. https://doi.org/10.21105/joss.02782
 
-A YouTube overview of HectorUI by Stephanie Pennington can be found [here](https://www.youtube.com/watch?v=fBHXS7pjZcI).
+
+
+
