--- a/README.Rmd
+++ b/README.Rmd
@@ -86,8 +86,8 @@ interface to Hector
 ## Contributing to Hector
 
 The Hector team welcomes and values community contributions, but please see 
-our [Contribution Guide](articles/ContributionsGuide.html) and note by  contributing 
-to this project, you agree to abide to our [Contributor Code of Conduct](CODE_OF_CONDUCT.html)
+our [Contribution Guide](vignettes/articles/ContributionsGuide.html) and note by  contributing 
+to this project, you agree to abide to our [Contributor Code of Conduct](CODE_OF_CONDUCT.md)
 
 *** 
 
