--- a/README.Rmd
+++ b/README.Rmd
@@ -86,7 +86,7 @@ interface to Hector
 ## Contributing to Hector
 
 The Hector team welcomes and values community contributions, but please see 
-our [Contribution Guide](vignettes/articles/ContributionsGuide.html) and note by  contributing 
+our [Contribution Guide](vignettes/articles/ContributionsGuide.Rmd) and note by  contributing 
 to this project, you agree to abide to our [Contributor Code of Conduct](CODE_OF_CONDUCT.md)
 
 *** 
